# slothtime-rs

./: .gitignore  AGENTS.md  Cargo.toml  README.md  TUI_PLAN.ms  config.toml  entries.json
src/: app.rs  config.rs  export.rs  main.rs  time_entry.rs  ui.rs
