[package]
name = "slothtime-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
ratatui = "0.24"
crossterm = "0.27"
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
anyhow = "1.0"
csv = "1.1"
shellexpand = "2.1"
arboard = "3.2"
dirs = "6.0.0"
